MFC r330295: ZFS: fix adding vdevs to very large pools

PR:		226096