cddl/contrib/opensolaris/lib/libzfs/common/libzfs_import.c
@@ -911,6 +911,7 @@ zpool_read_label(int fd, nvlist_t **config)
 
 	free(label);
 	*config = NULL;
+	errno = ENOENT;
 	return (-1);
 }
 
